--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,5 +1,4 @@
 <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-
   <div class="form-group">
     <label for="email">Email address</label>
     <input
@@ -25,9 +24,9 @@
 
   <div class="form-group">
     <label for="role">Role</label>
-    <select name="role" id="role">
-    ` <option value="">Select Role</option>
-      <option *ngFor="let role of roles">{{role}}</option>
+    <select name="role" id="role" formControlName="role">
+      <option value="">Select Role</option>
+      <option *ngFor="let role of roles" [ngValue]="role">{{ role }}</option>
     </select>
   </div>
 
@@ -40,5 +39,4 @@
   </div>
 
   <button type="submit" class="btn btn-primary">Register</button>
-
 </form>
