--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -9,6 +9,7 @@
       placeholder="Enter email"
       formControlName="email"
     />
+    <span *ngIf="!signupForm.valid&&signupForm.touched">Email is required</span>
   </div>
 
   <div class="form-group">
