--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <app-registration></app-registration> -->
-<!-- <router-outlet></router-outlet> -->
-<app-login></app-login>
+<router-outlet></router-outlet>
+<!-- <app-login></app-login> -->
