--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,3 +31,7 @@
   <button  class="btn btn-primary" routerLink="register">Register</button>
 </form>
 </div>
+
+<div>
+<button  class="btn btn-primary" routerLink="rxjs">Rxjs</button>
+</div>
