--- a/src/app/products/dashboard/dashboard.component.html
+++ b/src/app/products/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <!-- <p *ngFor="let i of productsArray">
   {{i.id}} {{i.title}}
 </p> -->
-<button>Add Product</button>
+<button (click)="addProduct()">Add Product</button>
 <table class="table">
 <thead>
   <tr>
@@ -22,7 +22,6 @@
     <td>{{product.title}}</td>
     <td >{{product.description}}</td>
     <td>{{product.price}}</td>
-    <td>Edit</td>
     <td>
     <button type="button" (click)="deleteProduct(product.id)">Delete</button>
     </td>
