--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,44 @@
 <div class="card" style="width: 18rem;">
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="email">Email address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email"
-      aria-describedby="email"
-      placeholder="Enter email"
-      formControlName="email"
-    />
-    <div *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched" class="text-danger"
-      >Email is required</div
-    >
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      placeholder="Password"
-      formControlName="password"
-    />
-    <div *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched" class="text-danger">Password is required</div>
-  </div>
-  <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button>
-</form>
-<button  class="btn btn-primary" routerLink="register">Register</button>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        aria-describedby="email"
+        placeholder="Enter email"
+        formControlName="email"
+      />
+      <div
+        *ngIf="!loginForm.get('email').valid && loginForm.get('email').touched"
+        class="text-danger"
+      >
+        Email is required
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        placeholder="Password"
+        formControlName="password"
+      />
+      <div
+        *ngIf="
+          !loginForm.get('password').valid && loginForm.get('password').touched
+        "
+        class="text-danger"
+      >
+        Password is required
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">
+      Login
+    </button>
+  </form>
+  <button class="btn btn-primary" routerLink="register">Register</button>
 </div>
 
-<div>
-<button  class="btn btn-primary" routerLink="rxjs">Rxjs</button>
-</div>
