7 files modified, 1 added, 1 deleted

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,31 @@
 <div class="container">
-
+  <nav class="navbar">
+    <div class="row">
+      <div class="dropdown col">
+        <button
+          class="btn btn-secondary dropdown-toggle"
+          data-bs-toggle="dropdown"
+        >
+          Products
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+          <li><a class="dropdown-item" href="#">View Prodcuts</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+        >
+          RxJS
+        </button>
+      </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+        >
+          Bootstrap
+        </button>
+      </div>
+    </div>
+  </nav>
 </div>
