--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <app-registration></app-registration> -->
+<app-header></app-header>
 <router-outlet></router-outlet>
-<!-- <app-login></app-login> -->
