--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
           Products
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">View Prodcuts</a></li>
+          <li><a class="dropdown-item" routerLink="products/dashboard">View Prodcuts</a></li>
         </ul>
       </div>
       <div class="col">
