--- a/src/app/products/dashboard/dashboard.component.html
+++ b/src/app/products/dashboard/dashboard.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-10">
+    <div class="col">
       <button (click)="addProduct()" class="btn btn-primary">Add Product</button>
     </div>
-    <div class="col-2">
+    <div class="col">
+      <button  class="btn btn-info" >Go Back</button>
+    </div>
+    <div class="col">
       <button (click)="logout()" class="btn btn-warning">Logout</button>
     </div>
   </div>
