--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card mt-3" style="width: 20rem;">
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="email">Email address</label>
@@ -77,6 +77,6 @@
       Register
     </button>
 
-    <button class="btn btn-primary" routerLink="">Login</button>
+    <button class="btn btn-primary ms-3" routerLink="">Login</button>
   </form>
 </div>
