--- a/src/app/registration/registration.component.css
+++ b/src/app/registration/registration.component.css
@@ -7,5 +7,6 @@
   align-items: center;
   justify-content: center;
   display: flex;
-  height: 100;
+  height: 150;
+  background-color: #f5efef;
 }
