--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -51,7 +51,7 @@
         </div>
       </form>
       <small>Don't have an account?.</small>
-      <button class="btn btn-primary btn-sm" routerLink="register">Click here to Register</button>
+      <button class="btn btn-primary btn-sm" routerLink="/register">Click here to Register</button>
     </div>
   </div>
 </div>
