--- a/src/app/bootstrap-learning/bootstrap-learning.component.html
+++ b/src/app/bootstrap-learning/bootstrap-learning.component.html
@@ -1,2 +1,6 @@
-
-<button class="btn btn-primary pe-4">Hello</button>
+<div class="container">
+  <button class="btn btn-primary pe-4 m-1">primary</button>
+  <button class="btn btn-info pe-4 m-1">info</button>
+  <button class="btn btn-danger pe-4 m-1">danger</button>
+  <button class="btn btn-success pe-4 m-1">success</button>
+</div>
