--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,7 @@
       <div class="col">
         <button
           class="btn btn-secondary"
+          routerLink="/rxjs"
         >
           RxJS
         </button>
@@ -22,6 +23,7 @@
       <div class="col">
         <button
           class="btn btn-secondary"
+          routerLink="/bootstrap"
         >
           Bootstrap
         </button>
