--- a/src/app/rxjs-learning/rxjs-learning.component.html
+++ b/src/app/rxjs-learning/rxjs-learning.component.html
@@ -1,10 +1,17 @@
-<h2>Search with RxJS</h2>
+<div class="container">
+  <h2>Search with RxJS</h2>
 
-<div [formGroup]="searchForm">
-    <input type="text" formControlName="name" (keyup)="readValue()">
-</div>
+  <div [formGroup]="searchForm">
+    <input type="text" formControlName="name" (keyup)="readValue()" />
+  </div>
 
-<div>
-<button #validate (click)="fromEventObservable()" class="btn btn-primary btn-sm" >From event</button>
-
+  <div>
+    <button
+      #validate
+      (click)="fromEventObservable()"
+      class="btn btn-primary btn-sm"
+    >
+      From event
+    </button>
+  </div>
 </div>
