4 files modified, 2 added

--- a/src/app/bootstrap-learning/bootstrap-learning.component.css
+++ b/src/app/bootstrap-learning/bootstrap-learning.component.css
@@ -1,3 +1,18 @@
-.a{
+.div1{
   background-color: aqua;
+}
+.div2{
+  background-color: rgb(64, 196, 196);
+}
+.div3{
+  background-color: rgb(4, 100, 100);
+}
+.div4{
+  background-color: rgb(42, 78, 9);
+}
+.div5{
+  background-color:blue;
+}
+.div6{
+  background-color: yellow;
 }
