--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,6 +28,14 @@
           Bootstrap
         </button>
       </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+          routerLink="/flexbox"
+        >
+        Flexbox
+        </button>
+      </div>
     </div>
   </nav>
 </div>
