--- a/src/app/flexbox/flexbox.component.html
+++ b/src/app/flexbox/flexbox.component.html
@@ -1,3 +1,11 @@
 <div class="container">
-div*3
+  <div class="one">
+    <h1>Section 1</h1>
+  </div>
+  <div class="two">
+    <h1>Section 2</h1>
+  </div>
+  <div class="three">
+    <h1>Section 3</h1>
+  </div>
 </div>
