3 files modified, 2 added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,6 +36,14 @@
         Flexbox
         </button>
       </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+          routerLink="/scss"
+        >
+        SCSS
+        </button>
+      </div>
     </div>
   </nav>
 </div>
