4 files modified, 2 added

--- a/src/app/scss-learning/scss-learning.component.scss
+++ b/src/app/scss-learning/scss-learning.component.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
 
+// variables 
 $mainColor: red;
 $bgColor: black;
 p{
@@ -10,6 +11,8 @@ h1{
     color: $mainColor;
     background-color: $bgColor;
 }
+
+// mixins
 
 @mixin headingStyle($color:green) {
     font-family: 'Courier New', Courier, monospace;
