2 files modified, 1 added

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,6 +44,14 @@
         SCSS
         </button>
       </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+          routerLink="/Subjects"
+        >
+        Subjects
+        </button>
+      </div>
     </div>
   </nav>
 </div>
