--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
       <div class="col">
         <button
           class="btn btn-secondary"
-          routerLink="/Subjects"
+          routerLink="/subjects"
         >
         Subjects
         </button>
