--- a/src/app/subjects/subjects.component.html
+++ b/src/app/subjects/subjects.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="btn-container">
     <div class="section">
-      <div class="btn btn-dark" (click)="emitData()">Emit Data</div>
-      <div class="btn btn-dark" (click)="getData()">Subscribe</div>
+      <div class="btn btn-success" (click)="emitData()">Emit Data</div>
+      <div class="btn btn-primary" (click)="getData()">Subscribe</div>
     </div>
   </div>
   <div class="text-container">
