--- a/src/app/rxjs-learning/rxjs-learning.component.html
+++ b/src/app/rxjs-learning/rxjs-learning.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div>
-  <lib-search class="search mr-10px mb-10px" (searchText)="setSearch($event)"></lib-search>
+  <input class="search mr-10px mb-10px" (input)="setSearch($event)"/>
 
   <div>
     <button
