--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -52,6 +52,14 @@
         Subjects
         </button>
       </div>
+      <div class="col">
+        <button
+          class="btn btn-secondary"
+          routerLink="/ng-template"
+        >
+        Ng Template
+        </button>
+      </div>
     </div>
   </nav>
 </div>
