2 files modified, 2 added

--- a/src/app/ng-template/ng-template.component.html
+++ b/src/app/ng-template/ng-template.component.html
@@ -1,6 +1,6 @@
-<ng-template [ngIf]="article" [ngIfElse]="loading">
+<!-- <ng-template [ngIf]="article" [ngIfElse]="loading">
   <div>{{ article.title }}</div>
-</ng-template>
+</ng-template> -->
 
 <!-- <div class="article" *ngIf="article" ; else loading>{{ article.title }}</div>
 
@@ -10,6 +10,6 @@
 
 <!-- ng container - to wrap some elements -->
 
-<ng-container *ngIf="articles">
+<!-- <ng-container *ngIf="articles">
   <ng-container *ngFor="let number of numbers">{{ number }}</ng-container>
-</ng-container>
+</ng-container> -->
